Mumbai's new address updated.
Mumbai's new address updated.

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <br>
         <p class="text-blue address-logixal font16"><strong>Principal Delivery Center</strong></p>
         <p class="company-title-bold-font"> <strong>Logixal Solutions Private Limited </strong> </p>
-        <p class="address-logixal"> Unit 305-308, B-Wing, Sagar Tech Plaza,
+        <p class="address-logixal"> 401 - 406, A-Wing, Sagar Tech Plaza,
          <br> Andheri-Kurla Road, Sakinaka,Andheri (E),
          <br> <strong> Mumbai  </strong> 400072, Maharashtra, <strong>India.</strong>
          <br> Phone: +91-22-40491880
@@ -416,7 +416,7 @@
         <h5 class="text-blue address-logixal"><strong>Principal Delivery Center</strong></h5>
         <div class="kd-fix-5">
          <p class="company-title-bold-font"> <strong>Logixal Solutions Private Limited </strong> </p>
-         <p class=""> Unit 305-308, B-Wing, Sagar Tech Plaza,
+         <p class=""> 401 - 406, A-Wing, Sagar Tech Plaza,
           <br> Andheri-Kurla Road, Sakinaka,Andheri (E),
           <br> <strong> Mumbai  </strong> 400072, Maharashtra, <strong>India.</strong>
           <br> Phone: +91-22-40491880
