[Seema Teles] Job posting for Sr. eCommerce Architect

--- a/join-logixal.html
+++ b/join-logixal.html
@@ -167,19 +167,27 @@
  <section class="success-stories-logixal " id="Hiring">
   <div class="container ">
    <h1 class="text-danger text-center oracle-logixal font28 mt2 mb3">We are Hiring </h1>
-   <p class="text-center oracle-logixal">If you are intersted, mail us your updated resume on <span class="text-blue"><strong>hrd@logixal.com</strong></span></p>
+   <p class="text-center oracle-logixal">If you are intersted, mail us your updated resume on <span class="text-blue"><strong><a href="mailto:hrd@logixal.com">hrd@logixal.com</a></strong></span></p>
    <br>
    <div class="row">
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 mobile-mb visible-640">
+   
+   <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-6 mobile-mb visible-640">
      <div class="card-success-stories border-team">
-      <div class="card-headline font19 text-blue"><strong>UI Developer</strong></div>
-      <div class="card-text font14 font14"> Working with the development team to deliver engaging and highly usable user interfaces. This includes design, development, documentation, debugging, and support</div>
-      <div class="card-icon-image">
-       <a href="pdf/jobs//118_UI Developer.pdf" target="_blank"><img src="images/blue-arrow.png" alt="Arrow Image"></a>
-      </div>
+      <div class="card-headline font19 text-blue"><strong>Sr. eCommerce Architect @ USA</strong></div>
+      <div class="card-text font14">Senior eCommerce Architect (Cranfrod, NJ) is sought by Logixal, Inc. 
+	  Architect/Design solutions on Oracle Commerce & integrations with Oracle Commerce. Req. Bachelors & 5 yrs exp.<br/>
+	 <p class="topMargin10"> Please respond with resume to:<br/>
+<strong>Address :</strong> <a class="text-color-a" 
+href="https://goo.gl/maps/dFu4baxqmQQ2" 
+target="_blank">20 Commerce Drive, Ste. 135, Cranford, NJ 07016.
+
+ </a><br/>
+	 <strong> Email :</strong> <a class="text-color-a" href="mailto:hrd@logixal.com">hrd@logixal.com</a></p>
+	  </div>
+    
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 mobile-mb visible-640">
+	  <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-6 mobile-mb visible-640">
      <div class="card-success-stories border-team">
       <div class="card-headline font19 text-blue"><strong>Sr. Developer Lead OCC</strong></div>
       <div class="card-text font14">Participate as a senior member / technical lead the development and maintenance of Oracle ATG Web Commerce systems including co-ordination with 3rd party technical contacts.
@@ -190,7 +198,12 @@
       </div>
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 mobile-mb visible-640">
+  
+   
+   
+   
+  
+    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-6 mobile-mb visible-640">
      <div class="card-success-stories border-team">
       <div class="card-headline font19 text-blue"><strong>Tech Lead Java</strong></div>
       <div class="card-text font14">Would need to Deliver , Develop in Java and Integrate with Latest UI Technologies, Code Walkthrough with reportees and Would be working on a product which is built around BPM products </div>
@@ -199,16 +212,19 @@
       </div>
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 mobile-mb visible-640">
+    
+	 <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-6 mobile-mb visible-640">
      <div class="card-success-stories border-team">
-      <div class="card-headline font19 text-blue"><strong>Solution Architect </strong></div>
-      <div class="card-text font14">Work closely with the application team with respect to all the activities which can affect the solution (design, build, testing and implement), Define high level solution, technical building blocks and facilitate project. </div>
+      <div class="card-headline font19 text-blue"><strong>UI Developer</strong></div>
+      <div class="card-text font14 font14"> Working with the development team to deliver engaging and highly usable user interfaces. This includes design, development, documentation, debugging, and support</div>
       <div class="card-icon-image">
-       <a href="pdf/jobs//175_Solution_Arch_Australia.pdf" target="_blank"><img src="images/blue-arrow.png" alt="Arrow Image"></a>
+       <a href="pdf/jobs//118_UI Developer.pdf" target="_blank"><img src="images/blue-arrow.png" alt="Arrow Image"></a>
       </div>
      </div>
     </div>
-   </div>
+	 </div>
+	
+	
   </div>
  </section>
  <div class="copyright">
