[Seema Tales] Text added on home page related COVID-19

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
    </div>
   </div>
  </section>
+ <section>
+	<div class="container margin-top-lob" id="updates">
+		<p class="quoted-text"><q>One of the principles close to Logixal's heart is Customer and Employee Satisfaction and our pride in the family-like culture we encourage. This was demonstrated when the COVID-19 impact was anticipated in time and the team sprung into action. We made sure we quickly aligned our work ethics, focusing on both, minimal impact to our customers and ensuring employee well-being.</q></p>
+	</div>
+ </section>
  <section class="content" id="content">
   <div class="container margin-top-lob" id="brandings">
    <h3 class="font21 mt2 mb3"> Our  <strong> Lines of Business </strong></h3>
