Added changes for Data Engineering Suite instead of BPM

--- a/accelerators-widget.html
+++ b/accelerators-widget.html
@@ -36,7 +36,7 @@
          <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
         </li>
         <li>
-         <a href="business-process-management.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Business Process Management (BPM)</a>
+         <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav">  AI/ML Driven Solutions</a>
         </li>
         <li>
          <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
