--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
         </li>
         <li>
-         <a href="business-process-management.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Business Process Management (BPM)</a>
+         <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav">AI/ML Driven Solutions</a>
         </li>
         <li>
          <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
@@ -55,7 +55,7 @@
  <section class="nab-banner">
   <div class="BigBanner">
    <div class="item">
-    <a href="index.html#accelerators"> <img src="images/Homepage-banner-desktop-original+text.jpg" class="" alt="Logixal Banner">
+    <a href="index.html#accelerators"> <img src="images/homebanners/home_banner01_wt.jpg" class="" alt="Logixal Banner">
      <div class="member-logos"> <img src="images/01a-OraclePartner.png" class="img-responsive center-block" alt="Oracle Gold Partner"> <img src="images/01bNasscomMember.png" class="img-responsive center-block" alt="Nasscom Member"> </div>
     </a>
    </div>
@@ -77,7 +77,7 @@
      <a class="container-img" href="digital-commerce-solutions.html"><img src="images\01b-Lineofbusiness.jpg" alt="Digital Commerce"></a>
     </div>
     <div class="col-xs-6">
-     <a class="container-img" href="business-process-management.html"><img src="images\01c-Lineofbusiness.jpg" alt="BPM"></a>
+     <a class="container-img" href="data-engineering-suite.html"><img src="images\01c-Lineofbusiness.jpg" alt="Data Engineering Suite"></a>
     </div>
     <div class="col-xs-6">
      <a class="container-img" href="application-management-services.html"><img src="images\01d-Lineofbusiness.jpg" alt="APM"></a>
@@ -105,13 +105,13 @@
       <a href="digital-commerce-solutions.html"><img src="images/blue-arrow.png" alt="Blue Arrow" class="img-overlay hidden-xs"></a>
      </div>
     </div>
-    <div class=" col-lg-3  col-md-3 col-sm-6 col-xs-6 container-img visible-640"> <img class="img-responsive center-block image-lob" src="images\01c-Lineofbusiness.jpg" alt="BPM">
+    <div class=" col-lg-3  col-md-3 col-sm-6 col-xs-6 container-img visible-640"> <img class="img-responsive center-block image-lob" src="images\01c-Lineofbusiness.jpg" alt="Data Engineering Suite">
      <div class="overlay-lob">
-      <p class="font16 hidden-xs text-lob">BPM </p>
-      <p class="text hidden-xs">Strategy, Architecture, Process
-       <br> Modeling and Life Cycle Management
-       <br> with ready-to-go Process Accelerators.</p>
-      <a href="business-process-management.html"><img src="images/blue-arrow.png" alt="Blue Arrow" class="img-overlay hidden-xs"></a>
+      <p class="font16 hidden-xs text-lob">Data Engineering Suite </p>
+      <p class="text hidden-xs">Understand, Engage, Convert
+       <br> Delight with innovative and insightful
+       <br> AI/ML Solutions</p>
+      <a href="data-engineering-suite.html"><img src="images/blue-arrow.png" alt="Blue Arrow" class="img-overlay hidden-xs"></a>
      </div>
     </div>
     <div class=" col-lg-3  col-md-3 col-sm-6 col-xs-6 container-img visible-640"> <img class="img-responsive center-block image-lob" src="images\01d-Lineofbusiness.jpg" alt="APM">
@@ -390,7 +390,7 @@
          <br> Phone: +44 783 446 1261 </p>
        </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 kd-fix-3">
+      <!-- <div class="col-md-3 col-sm-6 col-xs-12 kd-fix-3">
        <div class="location-global-logixal tab-address tab-right">
         <p class="Country-region-name"> Australia &amp; New Zealand</p>
         <br>
@@ -399,7 +399,7 @@
          <br> <strong>Brisbane </strong> City 4000, QLD, <strong>Australia.</strong>
          <br> Phone : +61 7 3218 1231 </p>
        </div>
-      </div>
+      </div> -->
      </div>
     </div>
    </div>
