--- a/about-us.html
+++ b/about-us.html
@@ -33,7 +33,7 @@
          <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
         </li>
         <li>
-         <a href="business-process-management.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Business Process Management (BPM)</a>
+          <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav">  AI/ML Driven Solutions</a>
         </li>
         <li>
          <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
@@ -99,7 +99,7 @@
   <div class="container ">
    <h1 class="text-danger text-center font28 mt2 mb3">Our Management Team</h1>
    <div class="row">
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
+    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-4 oracle-logixal visible-640">
      <div class="card"> <img class="card-img-top" src="images\01-DeepakGala.jpg">
       <div class="card-block">
        <h6 class="text-bold  text-blue text-center font17">Deepak Gala</h6>
@@ -108,7 +108,7 @@
       </div>
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
+    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-4 oracle-logixal visible-640">
      <div class="card"> <img class="card-img-top" src="images\02-Uttam.jpg">
       <div class="card-block">
        <h6 class="text-bold text-blue text-center font17">Uttam Gadkary</h6>
@@ -117,7 +117,7 @@
       </div>
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
+    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-4 oracle-logixal visible-640">
      <div class="card"> <img class="card-img-top" src="images\03-Gaurav.jpg">
       <div class="card-block">
        <h6 class="text-bold  text-blue text-center font17">Gaurav Deshpande</h6>
@@ -126,7 +126,7 @@
       </div>
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
+    <!-- <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
      <div class="card"> <img class="card-img-top" src="images\04-Vipul.jpg">
       <div class="card-block">
        <h6 class="text-bold text-blue text-center font17">Vipul Vichhivora</h6>
@@ -134,7 +134,7 @@
        <p class=" text-center text-muted ">vipul.vichhivora@logixal.com</p>
       </div>
      </div>
-    </div>
+    </div> -->
    </div>
   </div>
  </section>
