--- a/data-engineering-suite.html
+++ b/data-engineering-suite.html
@@ -4,7 +4,7 @@
 <head>
  <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
- <meta name="description" content="We provide comprehensive 24 X 7 support for your Oracle Commerce implemtation and have a diverese experience in maintaining and enhancing your Oracle Commerce applications">
+ <meta name="description" content="An end to end ecommerce and e banking solutions provider that enables your enterprise to operate with industry standards">
  <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
  <meta http-equiv="cache-control" content="max-age=518400">
  <meta http-equiv="pragma" content="public">
@@ -36,7 +36,7 @@
          <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
         </li>
         <li>
-         <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> AI/ML Driven Solutions</a>
+         <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Artificial Intelligence / Machine Learning</a>
         </li>
         <li>
          <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
@@ -52,100 +52,81 @@
    </nav>
   </div>
  </header>
- <div class="banner-image">
+ <div id="myCarousel" class="carousel slide-cancel" data-ride="carousel">
   <div class="item ">
-   <a href="index.html#accelerators"> <img src="images\AMS-banner-image-with-shadow.jpg" class="hidden-xs resize-inner-banner" alt="AMS Banner"> <img src="images\AMS-banner-image-without-shadow.jpg" class="visible-xs" alt="AMS Banner"> </a>
+   <a href="index.html#accelerators"> <img src="images/DES-banner-without-shadow_2_wt.jpg" class="resize-des-inner-banner" alt="Data Engineering Suite Banner"> </a>
   </div>
  </div>
  <div class="container-fluid">
   <div class="row">
-   <nav class="breadcrumb breadcrumb-bg-color font10"> <a class="breadcrumb-item" href="index.html">Home</a> <a class="breadcrumb-item" href="index.html">Lines of Business </a> <span class="breadcrumb-item active">AMS </span> </nav>
+   <nav class="breadcrumb breadcrumb-bg-color font10"> <a class="breadcrumb-item" href="index.html">Home</a> <a class="breadcrumb-item" href="index.html">Lines of Business </a> <span class="breadcrumb-item active">AI/ML Driven Solutions </span> </nav>
   </div>
  </div>
- <section class="text-center">
+ <section class="banking-description text-center">
   <div class="container">
    <div class="row">
     <div class="col-xs-12">
-     <h2 class="text-danger font32 mt2 mb3">Application Management Services </h2>
-     <p>It is a significant task these days for businesses to maintain and run a full-fledged ecommerce system.</p>
-     <p class="mb3"> Logixal can pitch in and help you effectively maintain your application. </p>
+     <h2 class="text-danger font32 mobile-mb mb3 mt2">Data Engineering Suite (DES)</h2>
+     <p class="text-center mb3"> Our AI / ML practice provides solutions for <strong class="text-blue">a framework which helps in integrating existing applications</strong> as well as enhance user experience by using simple but powerful Machine Learning Algorithms running on Industry Standard application software. At the same time, it is also a framework and hence, can be extended to provide for any specific needs of the Retailer
+      <br>
+      <br> Our <strong class="text-blue">AI Powered Search Engine </strong>  with out of the box Digital Commerce Accelerator with Pre-Configured domain specific “fragments”. Ability to plug-in Machine Learning models for advanced analytics and user personalization
+      <br>
+<!--       <br> We have delivered complex business processes for the <strong class="text-blue">banking, financial services</strong> and <strong class="text-blue">digital commerce</strong> domains in the areas of origination of <strong class="text-blue">mortgage and bundled products, closure of accounts, multi-level approval workflows, payments, service request management, online banking, commerce applications </strong> etc. across assisted and digital channels.  -->
     </div>
    </div>
   </div>
  </section>
  <section class="definition-banking ">
   <div class="container">
-   <h2 class="text-blue text-center font21 mb3 mt2 mobile-mb">We enable your business operations and support activities in the following manner</h2>
    <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-push-6 col-md-6 col-md-push-6 oracle-logixal mobile-mb"> <img src="images/Dev-Ops.jpg" class="img-responsive center-block"> </div>
-    <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6 col-3">
-     <ul class="list-unstyled font14 bullet-blue">
+    <h2 class="text-danger text-center font28  mt2 mb3">Our Expertise</h2>
+    <p class="text-center mobile-pm2 mb3">We partner with our customers to provide comprehensive services to support Machine Learning initiatives with a strong focus on value and benefit delivery. Industry is seeking attention and putting efforts not only to retain existing customers but also constantly get in new customers. Better service can be provided by keeping <strong class="text-blue">track of various touchpoints</strong>. The efficiency of the service industry can also be increased exponentially by <strong class="text-blue">using automation as well increasing ML/AI to process data sources </strong>and then making sense to make calculated decisions at a faster pace. <!-- We automate existing manual and distributed processes to an efficient process model delivered by leveraging leading technology platforms for implementing BPM like <strong class="text-blue"> Oracle BPM, JBoss BPM </strong> and <strong class="text-blue">Pega</strong> etc. as <strong class="text-blue"><u>on-premise or cloud</u></strong> solutions or developing custom solutions tailored to meet specific point problems.</p> -->
+    <br>
+    <div class="col-xs-12 col-sm-6 col-md-5">
+     <a href="#"><img src="images/DES_expertise.png" class="img-responsive center-block"></a>
+     <br>
+     <br> </div>
+    <div class="col-xs-12 col-sm-6 col-md-7 margin-bottom">
+     <p class="text-blue font19"><br/><br/>We have contributed from strategy, consulting and advisory, architecture and solutioning to implementation of Machine Learning:</p>
+     <br>
+     <ul class="list-unstyled bullet-blue mobile-pm2">
       <li>
-       <p>Integration and installation support</p>
+       <p> Discover customer needs</p>
       </li>
       <li>
-       <p>Application support and troubleshooting</p>
+       <p> Analyze business requirements</p>
       </li>
       <li>
-       <p>24 x 7 L1, L2 and L3 support</p>
+       <p> Formulate strategy </p>
       </li>
       <li>
-       <p>Enhancements, upgrades and management of your ecommerce platform</p>
+       <p> Learn from patterns and trends</p>
       </li>
       <li>
-       <p>Helping business users in their Business As Usual functions</p>
-      </li>
-      <li>
-       <p>Optimization of your ecommerce technology stack and its components</p>
-      </li>
-      <li>
-       <p>Management of online catalogs and product or data feeds</p>
-      </li>
-      <li>
-       <p>Server installation, configuration and management</p>
-      </li>
-      <li>
-       <p>Problem analysis, root cause investigation and quick resolution</p>
+       <p> Deliver Value to business </p>
       </li>
      </ul>
     </div>
    </div>
   </div>
   <br> </section>
- <section class="ecommerce-banking ">
+ <section class="ecommerce-banking margin-bottom">
   <div class="container">
-   <h2 class="text-danger text-center font21 mt2 mb3">With Logixal as your eCommerce Partners you will have a support and maintenance plan that will benefit you in the following ways</h2>
-   <div class="row">
-    <br>
-    <div class="col-xs-12 col-sm-6 col-md-6">
-     <ul class="list-unstyled bullet-blue">
-      <li>
-       <p>Your content is always up to date, relevant and continually refreshed</p>
-      </li>
-      <li>
-       <p>Your website is state of the art, incorporating new technologies and advanced third party solutions</p>
-      </li>
-      <li>
-       <p>Your website is always online - if it goes down for any reason, we will fix the problem immediately</p>
-      </li>
-      <li>
-       <p>Support &amp; maintenance services with availability upto 24/7</p>
-      </li>
-     </ul>
-    </div>
-    <div class="col-xs-12 col-sm-6 ">
-     <ul class="list-unstyled bullet-blue">
-      <li>
-       <p>You receive best value for your money through our efficient services and the sophisticated processes and procedures that we enable</p>
-      </li>
-      <li>
-       <p>We offer skilled, Oracle certified resources who understand the ecommerce domain and technology framework and are able to help and troubleshoot with ease</p>
-      </li>
-      <li>
-       <p>Traffic and Analytics data will be available to you so you can keep track of your ecommerce application's performance</p>
-      </li>
-     </ul>
-    </div>
+   <h2 class="text-danger text-center font28 mb3 mt2 mobile-mb">Solutions and Technology Delivery</h2>
+   <p class="text-center mobile-pm2  ">We design, develop and deliver end-to-end technology solutions for BPM initiatives driven by strong experience of delivering workflow based automation for enterprise processes across all digital and human assisted channels, to deliver a seamless customer experience and business growth. </p>
+   <p class="text-center mobile-pm2  mobile-mb mb3"> Workflow | Business Rules | Assignments | Task Routing| Process Tracking | Analytics | Business Activity Monitoring</p>
+   <div class="col-xs-12 col-sm-6 col-sm-push-6 col-md-6 col-md-push-6"> <img src="images/DES_delivery.png" class="img-responsive center-block margin-bottom border-img" alt=""> </div>
+   <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6 row-bpm">
+    <p class="text-blue font21">Our technology delivery capabilities encompass the following benefits to our customers driving success of their AI/ML initiatives: </p>
+    <ul class="list-unstyled font14 padding0 bullet-blue">
+     <li class=" padding0 oracle-logixal">In-built ability to learn and understand user behaviour which results in Increase Relevancy and Better User Recommendations. </li>
+     <li class=" padding0 oracle-logixal">Not just a “tool” but a “framework”. Works on its own data model thereby making it flexible to integrate with any business application.
+      <br>
+      <!-- <p class="text-muted">Incorporate Business Rules for Maximum User Experience  using the “framework” experience manager for customizing  menu, layouts and banners.</p> -->
+     </li>
+     <li class=" padding0 oracle-logixal">Ability to Modify , Configure, Enhance and add Plugin ML Models in the Search Experienc.</li>
+     <li class=" padding0">Ready upload adapters to import data information from File System, RDBMS.</li>
+    </ul>
    </div>
   </div>
  </section>
@@ -162,7 +143,7 @@
                            <li>About Us |</li>
                         </small> </a>
       <a href="resources.html"> <small>
-                           <li>Resources &nbsp; |</li>
+                           <li>Resources |</li>
                         </small> </a>
       <a href="join-logixal.html" class="small-text"> <small>
                            <li>Work With Us</li>
@@ -180,7 +161,7 @@
      </div>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
-     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2017. All rights reserved</small> </p>
+     <p class="text-center font-footer"> Logixal Solutions - Copyright &copy; 2017. All rights reserved </p>
     </div>
    </div>
   </div>
