Added changes for des section in accelerators

--- a/accelerators-widget.html
+++ b/accelerators-widget.html
@@ -102,6 +102,38 @@
    </div>
   </div>
   <br> </section>
+  <!-- section for DES -->
+ <section class=" text-center" id="DigiBank">
+  <div class="container">
+   <div class="row">
+    <div class="col-xs-12 col-md-12">
+     <h1 class="text-danger margin-bottom font32 mt2 mb3">Digital Engineering Suite </h1>
+     <p class="text-center">Logixal is a <b>Data Engineering Suite (DES)</b> helps to provide solutions with respect to customer retention, better search capability as well automate manual and repetitive tasks. It is a framework which helps in integrating existing applications as well as enhance user experience by using simple but powerful Machine Learning Algorithms running on Industry Standard application software. At the same time, it is also a framework and hence, can be extended to provide for any custom needs.</p>
+    </div>
+   </div>
+  </div>
+ </section>
+ <div class="container">
+  <div class="row">
+   <ul class="icon-gallery_ai col-xs-12">
+    <li class="col-xs-6 col-md-3"><a href="#">
+      <br/> 
+      <img class="des_ai" src = "images/icons_kd/kd_ai.png">
+      <span class="desc">ML Intelligence</span></a></li>
+    <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico commerce"><span class="desc"> Headless Commerce </span></a></li>
+    <li class="col-xs-6 col-md-3"><a href="#">
+      <br/> 
+      <img class="des_ai" src = "images/icons_kd/kd_virtual.png">
+      <span class="desc"> Virtual Assistant</span></a></li>
+    <li class="col-xs-6 col-md-3"><a href="#">
+      <br/> 
+      <img class="des_ai" src = "images/icons_kd/DES_monitoring_icon.png">
+      <span class="desc"> Log Monitoring</span></a>
+    </li>
+   </ul>
+  </div>
+ </div>
+  <!-- Section for DES ends -->
  <div class="copyright">
   <div class="container">
    <div class="row">
