--- a/index.html
+++ b/index.html
@@ -470,13 +470,14 @@
        </div>
       </div>
      </div>
-     <div class="panel panel-custom">
+     <!-- <div class="panel panel-custom">
       <div class="panel-heading" role="tab" id="headingFour">
        <h4 class="panel-title">
                            <a class="collapsed noborder" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                            <i class="more-less glyphicon glyphicon-plus"></i>
                            Australia &amp; New Zealand</a>
-                        </h4> </div>
+                        </h4> 
+      </div>
       <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
        <div class="panel-body">
         <p class="company-title-bold-font"><strong>Inventec Australia Pty. Ltd.</strong></p>
@@ -486,7 +487,7 @@
        </div>
       </div>
      </div>
-    </div>
+    </div> -->
    </div>
   </div>
  </section>
