--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
  <meta name="description" content="An end to end ecommerce and e banking solutions provider that enables your enterprise to operate with industry standards">
  <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
@@ -203,7 +203,7 @@
   </div>
  </section>
  <section id="ourWork" class="ourWork">
-  <div class="container ">
+  <!-- <div class="container ">
    <h3 class="font21 mt2 mb33">Our Valued <strong> Customers </strong></h3>
    <div class="row hidden-xs">
     <div class="col-xs-12 col-sm-6 col-md-3 visible-640">
@@ -237,7 +237,7 @@
       </a>
      </div>
     </div>
-   </div>
+   </div> -->
    <div class="row" id="cust-logo">
     <div class="col-xs-12 hidden-sm hidden-md hidden-lg">
      <div class="container">
