added necessary changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
  <meta name="description" content="An end to end ecommerce and e banking solutions provider that enables your enterprise to operate with industry standards">
- <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
+ <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, e-commerce, best e-commerce, e commerce platform">
  <meta http-equiv="cache-control" content="max-age=518400">
  <meta http-equiv="pragma" content="public">
  <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -56,7 +56,7 @@
   <div class="BigBanner">
    <div class="item">
     <a href="index.html#accelerators"> <img src="images/homebanners/home_banner01_wt.jpg" class="" alt="Logixal Banner">
-     <div class="member-logos"> <img src="images/01a-OraclePartner.png" class="img-responsive center-block" alt="Oracle Gold Partner"> <img src="images/01bNasscomMember.png" class="img-responsive center-block" alt="Nasscom Member"> </div>
+     <div class="member-logos"><img src="images/01bNasscomMember.png" class="img-responsive center-block" alt="Nasscom Member"> </div>
     </a>
    </div>
   </div>
@@ -140,7 +140,7 @@
      <div class="col-md-9 col-sm-8 col-xs-12 visible-640">
       <div class="text-accel-widget no-mar">
        <p class="text-blue font16"> <strong>Digital Banking </strong> </p>
-       <p class="kd-fix-6">Logixal is a <b>Specialized Oracle Gold Partner</b> for providing services around Oracle’s Digital Banking Platforms. Our Digital Banking Practice has demonstrated capability to offer the entire range of Consulting Services.</p>
+       <p class="kd-fix-6">Logixal provides services around Digital Banking Practice has demonstrated capability to offer the entire range of Consulting Services.</p>
       </div>
      </div>
     </div>
@@ -150,7 +150,7 @@
     <ul class="icon-gallery col-xs-12">
      <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico lock"><span class="desc">Two-Factor Authentication</span></a></li>
      <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico mobile"><span class="desc">Mobile Banking</span></a></li>
-     <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico oracle"><span class="desc">Integration with Oracle Products</span></a></li>
+     <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico oracle"><span class="desc">Integration with Products</span></a></li>
      <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico"><span class="desc">Region Specific Packages</span></a></li>
     </ul>
    </div>
@@ -164,7 +164,7 @@
     <div class="col-md-9 col-sm-8 col-xs-12 visible-640">
      <div class="text-accel-widget no-mar">
       <p class="text-blue font16"> <strong>Digital Commerce </strong> </p>
-      <p class="kd-fix-6">Logixal is a <b>Specialized Oracle Gold Partner</b> with Oracle for providing services on Oracle Commerce (ATG) and Oracle Commerce Cloud Platform. Our Accelerator solution can reduce the development time.</p>
+      <p class="kd-fix-6">Logixal provides services on Commerce Platform. Our Accelerator solution can reduce the development time.</p>
      </div>
     </div>
     <br>
