added necessary changes

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="col-md-9 col-sm-8 col-xs-12 visible-640">
      <div class="text-accel-widget no-mar">
       <p class="text-blue font16"> <strong>Digital Commerce </strong> </p>
-      <p class="kd-fix-6">Logixal provides services on Commerce Platform. Our Accelerator solution can reduce the development time.</p>
+      <p class="kd-fix-6">Logixal provides services on various commerce platform with our pre-built Accelerator solution.</p>
      </div>
     </div>
     <br>
