added necessary changes

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
    </div> -->
    <div class="row" id="cust-logo">
     <div class="col-xs-12 hidden-sm hidden-md hidden-lg">
-     <div class="container">
+     <!-- <div class="container">
       <div class="panel-group" id="accordion">
        <div class="panel panel-custom">
         <div class="panel-heading">
@@ -253,7 +253,7 @@
         </div>
        </div>
       </div>
-     </div>
+     </div> -->
      <button class="SeeMore2 btn-view-more kd-fix-4 pull-right btn-custom" data-toggle="collapse" href="#collapseCustomers"><span class="btn-text">View More</span></button>
     </div>
    </div>
