added necessary changes

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <ul class="icon-gallery col-xs-12">
      <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico lock"><span class="desc">Two-Factor Authentication</span></a></li>
      <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico mobile"><span class="desc">Mobile Banking</span></a></li>
-     <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico oracle"><span class="desc">Integration with Products</span></a></li>
+     <li class="col-xs-6 col-md-3"><a href="#"><span class="desc">Integration with Products</span></a></li>
      <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico"><span class="desc">Region Specific Packages</span></a></li>
     </ul>
    </div>
