--- a/digital-commerce-solutions.html
+++ b/digital-commerce-solutions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  <meta name="description" content="A proven experience of over a decade that can create synergy and value for clients who want to replatform or upgrade their Oracle Commerce stack, thereby enabling their business processes to harness the true power of the latest product suite that Oracle has to offer">
  <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
@@ -94,12 +94,12 @@
       <p><strong class="text-blue ml640"> Web </strong> Center Sites</p>
      </div>
     </div>
-    <div class="col-lg-4 col-md-6 col-sm-12">
+    <!-- <div class="col-lg-4 col-md-6 col-sm-12">
      <div class="abg-wrapper abg5">
       <p>
        <Strong class="text-blue"> Siebel </strong> integrated platform</p>
      </div>
-    </div>
+    </div> -->
    </div>
   </div>
   <br> </div>
